<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VSS</string>
    <string name="welcome_message">Welcome to The Vehicle Security System App</string>
    <string name="loading">Loading &#8230;</string>
    <string name="desc">picture of a hawkeye</string>
    <string name="login_message">Welcome First Last !</string>
    <string name="pick_vehicle">Pick Your Vehicle</string>
    <string name="new_vehicle">Add New Vehicle</string>
    <string name="pw">Password</string>
    <string name="pwhint">Enter Password Here</string>
    <string name="repw">Re-type Password</string>
    <string name="un">Username</string>
    <string name="unhint">Enter Email Here</string>
    <string name="vn">Name of Vehicle</string>
    <string name="vnhint">Enter Name Here</string>
    <string name="Uname">Username</string>
    <string name="UNhint">Enter Username Here</string>
    <string name="regID">ADD NEW VEHICLE</string>
    <string name="fn">First name</string>
    <string name="fnhint">Enter First Name</string>
    <string name="ln">Last name</string>
    <string name="lnhint">Enter Last Name</string>
    <string name="logbutton">LOGIN</string>
    <string name="regbutton">REGISTER</string>
    <string name="addCarButton">ADD VEHICLE</string>
    <string name="spindesc">List of Registered Cars</string>
    <string name="alertList">Previous Alerts</string>
    <string name="loginscreen_name">LoginActivity</string>
    <string name="mainscreen_name">MainScreenActivity</string>
    <string name="regscreen_name">RegisterActivity</string>
    <string name="title_activity_sms_receiver">SmsReceiver</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="viewalert_name">View Prev Alerts</string>
    <string name="phonealert">Device Phone Number</string>
    <string name="phonehint">Enter Phone # Here</string>
    <string name="title_activity_add_vehicle">AddVehicleActivity</string>

</resources>