<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_bg" 
    android:paddingTop="30dp">
    
<LinearLayout     
    android:id="@+id/vnLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<TextView
    android:id="@+id/vnametxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/vn"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/credentials"
    android:textStyle="normal|bold"
    android:visibility="visible" 
    android:orientation="vertical"
    android:padding="20dp"/>

<EditText
    android:id="@+id/vname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/vnhint"
    android:orientation="vertical"
    android:padding="20dp" />

</LinearLayout>

<LinearLayout     
    android:id="@+id/phoneLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/vnLayout" >
<TextView
    android:id="@+id/phonetxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phonealert"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/credentials"
    android:textStyle="normal|bold"
    android:visibility="visible" 
    android:orientation="vertical"
    android:padding="20dp"/>

<EditText
    android:id="@+id/phonenum"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/phonehint"
    android:orientation="vertical"
    android:padding="20dp" />

</LinearLayout>


<LinearLayout     
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/regIDbuttonLayout"
    android:layout_below="@id/phoneLayout"
    android:gravity="center_horizontal"
    android:paddingTop="50dp">

<Button
    android:id="@+id/regIDbutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/regID"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/credentials"
    android:textStyle="normal|bold"
    android:visibility="visible"
    android:padding="20dp" >  
    </Button>
</LinearLayout>

</RelativeLayout>