<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_bg"
    android:gravity="center_vertical" >

<LinearLayout     
    android:id="@+id/unLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<TextView
    android:id="@+id/usernametxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/un"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/credentials"
    android:textStyle="normal|bold"
    android:visibility="visible" 
    android:orientation="vertical"
    android:padding="20dp"/>

<EditText
    android:id="@+id/loglogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/unhint"
    android:inputType="textEmailAddress"
    android:orientation="vertical"
    android:padding="20dp" />

</LinearLayout>

<LinearLayout     
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pwLayout"
    android:layout_below="@id/unLayout" > 
<TextView
    android:id="@+id/passwordtxt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/pw"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/credentials"
    android:textStyle="normal|bold"
    android:orientation="vertical"
    android:visibility="visible"
    android:padding="20dp" />

<EditText
    android:id="@+id/logpassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:gravity="right|center_vertical"
    android:hint="@string/pwhint"
    android:inputType="textPassword"
    android:orientation="vertical" 
    android:padding="20dp"/>
</LinearLayout>

<LinearLayout     
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/loginbuttonLayout"
    android:layout_below="@id/pwLayout"
    android:gravity="center_horizontal"
    android:paddingTop="50dp">

<Button
    android:id="@+id/loggbutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/logbutton"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/credentials"
    android:textStyle="normal|bold"
    android:visibility="visible"
    android:padding="20dp" >  
    </Button>
</LinearLayout>

<LinearLayout     
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/registerbuttonlayout"
    android:layout_below="@id/loginbuttonLayout"
    android:gravity="center_horizontal"
    android:paddingTop="10dp">

<Button
    android:id="@+id/newregbutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/regbutton"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/credentials"
    android:textStyle="normal|bold"
    android:visibility="visible"
    android:padding="20dp" >  
    </Button>
</LinearLayout>

</RelativeLayout>


