<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_bg"
    android:orientation="vertical" >

<TextView
    android:paddingTop="20dp"
    android:id="@+id/textView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_horizontal|top"
    android:text="@string/welcome_message"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/text_size"
    android:textStyle="normal|bold"
    android:visibility="visible" >

</TextView>

<ImageView
    android:id="@+id/imageView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:contentDescription="@string/desc"
    android:longClickable="false"
    android:paddingTop="50dp"
    android:scaleType="center"
    android:src="@drawable/hawkeye"
    android:visibility="visible" />

<TextView
    android:paddingBottom="20dp"
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|bottom"
    android:text="@string/loading"
    android:textColorLink="@color/text_color"
    android:textSize="@dimen/text_size"
    android:textStyle="normal|bold"
    android:visibility="visible" />

</LinearLayout>